--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -3,12 +3,12 @@
   justify-content: space-between;
   align-items: center;
   background-color: #e9e9e9;
-  padding: 15px 30px; /* Slightly increased padding */
+  padding: 15px 30px;
   font-family: Arial, sans-serif;
 }
 
 .navbar-brand {
-  font-size: 30px; /* Smaller than before but larger than the original */
+  font-size: 30px;
   font-weight: bold;
   background: none;
   border: none;
@@ -23,11 +23,12 @@
   gap: 50px; /* Increased gap */
   margin: 0;
   padding: 0;
+  margin-right: 125px; /* Margin to push it 20px from the right */
 }
 
 .navbar-menu li {
   position: relative;
-  font-size: 20px; /* Slightly smaller font size */
+  font-size: 20px;
 }
 
 .navbar-menu a, .contact-button {
@@ -40,12 +41,8 @@
   background: none;
   border: none;
   cursor: pointer;
-  font-size: 20px; /* Slightly smaller font size */
+  font-size: 20px;
   font-family: inherit;
-}
-
-.contact-button:hover {
-  text-decoration: underline; /* Underline on hover for better UX */
 }
 
 .services-menu .dropdown-menu {
@@ -78,4 +75,16 @@
 
 .dropdown-menu li:hover {
   background-color: #ccc;
+}
+
+.language-toggle {
+  background: none;
+  border: none;
+  cursor: pointer;
+  font-size: 20px;
+  font-family: inherit;
+  color: black;
+  margin-left: 20px;
+  text-align: center;
+  margin-top:-5px;
 }
